--- a/app.yaml
+++ b/app.yaml
@@ -14,6 +14,9 @@ handlers:
   static_files: narcissist/index.html
   upload: narcissist/index.html
 
+- url: /xmas2018
+  script: redirect.php
+
 # - url: /ry/borders
 #   static_files: ry/music.html
 #   upload: ry/music.html
